Bug 691133 - xpcom: fails to build darwin/x11. r=smichaud